# algorithms

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  README.md
src/: CMakeLists.txt  test.cc
src/graphs/: connectivity.h  connectivity_unittest.cc
src/math/: gcd.h  gcd_unittest.cc
src/strings/: aho_corasick.h  aho_corasick_unittest.cc  kmp.cc  kmp.h  kmp_unittest.cc
